# web-dataviewer

./: .gitignore  LICENSE  app.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  app.py
app/static/css/: style.css
app/static/js/: script.js  sliders.js
app/templates/: color_slider.html  extend.html  home.html  index.html  layout.html  navigation.html  small_slider.html
images/: 3684b771-54ac-4bb6-871b-79c8632995c7.csv
static/js/: script.js
templates/: layout.html  small_slider.html
