[project]
name = "web_graph_dataviewer"
version = "0.0.2"
authors = [
  { name="Flynn OConnell", email="FlynnOConnell@gmail.com" },
]
description = "Testing web-graph deployment"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NeuroPyPy/web_graph_testing"